--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,3 +19,10 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+
+<Limit GET POST PUT OPTIONS>
+    Require all granted
+</Limit>
+<LimitExcept GET POST PUT OPTIONS>
+    Require all denied
+</LimitExcept>
